# room_correction

./: .gitmodules  LICENSE  README.md
src/: CMakeLists.txt  CMakeSettings.json
src/juce_includes/: AppConfig.h  JuceHeader.h
src/rocor/gooey/: RoCorAudioProcessorEditor.cpp  RoCorAudioProcessorEditor.h  RoCorLAF.cpp  RoCorLAF.h  ThumbnailViewListBoxModel.cpp  ThumbnailViewListBoxModel.h
src/rocor/gooey/placement_map/: PlacementIcon.h  PlacmentMapComponent.cpp  PlacmentMapComponent.h
src/rocor/guts/: CapturePosition.h  IRCalculator.cpp  IRCalculator.h  RoCorAudioProcessor.cpp  RoCorAudioProcessor.h
src/rocor/inc/rocor/gooey/: RoCorAudioProcessorEditor.h  RoCorLAF.h  ThumbnailViewListBoxModel.h
src/rocor/inc/rocor/gooey/placement_map/: PlacementIcon.h  PlacmentMapComponent.h
src/rocor/inc/rocor/guts/: IRCalculator.h  RoCorAudioProcessor.h
src/rocor/src/gooey/: RoCorAudioProcessorEditor.cpp  RoCorLAF.cpp  ThumbnailViewListBoxModel.cpp
src/rocor/src/gooey/placement_map/: PlacmentMapComponent.cpp
src/rocor/src/guts/: IRCalculator.cpp  RoCorAudioProcessor.cpp
src/standalone/: CMakeLists.txt  RoCorApplication.cpp  RoCorApplication.h  RoCorComponent.cpp  RoCorComponent.h
src/test/: AllTests.cpp  CMakeLists.txt
src/test/tests/: test_IRCalculator.h
